// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tuple.js [acorn] format 1`] = `
"Unexpected character '[' (6:6)
  4 | ]
  5 |
> 6 | a = #[
    |      ^
  7 |   <div/>,
  8 |   <div/>,
  9 | ]
Cause: Unexpected character '[' (6:5)"
`;

exports[`tuple.js [espree] format 1`] = `
"Unexpected character '[' (6:6)
  4 | ]
  5 |
> 6 | a = #[
    |      ^
  7 |   <div/>,
  8 |   <div/>,
  9 | ]
Cause: Unexpected character '['"
`;

exports[`tuple.js [meriyah] format 1`] = `
"'#' not followed by identifier (6:5)
  4 | ]
  5 |
> 6 | a = #[
    |     ^
  7 |   <div/>,
  8 |   <div/>,
  9 | ]
Cause: [6:5]: '#' not followed by identifier"
`;

exports[`tuple.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
a = [
  <div/>,
  <div/>,
]

a = #[
  <div/>,
  <div/>,
]

=====================================output=====================================
a = [<div />, <div />];

a = #[<div />, <div />];

================================================================================
`;
